--- a/views/meats/show.ejs
+++ b/views/meats/show.ejs
@@ -2,15 +2,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fruits</title>
+    <title>Meats</title>
 </head>
 <body>
-    <h1><%= fruit.name %></h1>
-    <p>Color: <%= fruit.color %></p>
-    <% if (fruit.readyToEat) { %>
+    <h1><%= meat.name %></h1>
+    <p>Color: <%= meat.color %></p>
+    <% if (meat.readyToEat) { %>
         <p>Ready to Eat</p>
     <% }  else {%>
         <p>Not Ready to Eat</p>
     <% } %>
+
+    <a href="./meats"></a>
 </body>
 </html>
