feat: add POST route with new GET route

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,6 +10,20 @@
 </head>
 
 <body>
+    <header class="header">
+        <a href="#" class="logo">Portfolio</a>
+        <i class='bx bx-menu' id="menu-icon"></i>
+        <nav class="navbar">
+          <Total of 5 a tags>
+            <a href="#home" class="active">Home</a>
+            <a href="#about">About</a>
+            <a href="#services">Services</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#contact">Contact</a>
+    
+        </nav>
+    </header>
+
     <section class="home" id="home">
         <div class="home-content">
             <h3>Hello, It's Me</h3>
@@ -24,6 +38,9 @@
                 <a href="#"><i class='bx bxl-instagram-alt'></i></a>
                 <a href="#"><i class='bx bxl-linkedin-square'></i></a>
             </div>
+            <!-- <div class="5home-img">
+                <img src="" alt="Image" srcset="">
+            </div> -->
         </div>
 
         <!-- <div class="home-img">
@@ -32,37 +49,34 @@
      -->
     </section>
 
-    <section class="recipes" id="recipes">
-        <h2 class="heading">Our <span>recipes</span></h2>
+    <section class="services" id="services">
+        <h2 class="heading">Our <span>services</span></h2>
 
-        <div class="recipes-container">
-            <div class="meat-recipes">
+        <div class="services-container">
+            <div class="services-box">
 
-                <h3>Meat Dishes</h3>
+                <h3><a href="meats" class="btn">Meat Dishes</a></h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, deleniti.
                 </p>
-                <a href="meats" class="btn">Find recipes</a>
             </div>
 
-            <div class="veggie-recipes">
+            <div class="services-box">
 
-                <h3>Veggie Dishes</h3>
+                <h3><a href="veggies" class="btn">Veggie Dishes</a></h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, laborum.
                 </p>
-                <a href="veggies" class="btn">Find recipes</a>
             </div>
 
-            <div class="fruit-recipes">
+            <div class="services-box">
 
-                <h3>Fruit Dishes</h3>
+                <h3><a href="fruits" class="btn">Fruit Dishes</a></h3>
                 <p>
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis, sit!
                 </p>
-                <a href="fruits" class="btn">Find recipes</a>
             </div>
-            <h1><a href="recipes.ejs">Recipes</a></h1>
+            
         </div>
     </section>
 </body>
