--- a/views/fruits/index.ejs
+++ b/views/fruits/index.ejs
@@ -8,6 +8,9 @@
     <title>Fruits</title>
 </head>
 <body>
+    <nav>
+        <a href="/fruits/New">Create a new Fruit</a>
+    </nav>
     <section class="timeline">
         <div class="timeline-row">
             <div class="timeline-column">
