feat: adding routes

--- a/views/fruits/index.ejs
+++ b/views/fruits/index.ejs
@@ -8,6 +8,19 @@
     <title>Fruits</title>
 </head>
 <body>
+    <header class="header">
+        <a href="#" class="logo">Foods</a>
+        <i class='bx bx-menu' id="menu-icon"></i>
+        <nav class="navbar">
+          <Total of 5 a tags>
+            <a href="home.ejs" class="active">Home</a>
+            <a href="meats">About</a>
+            <a href="veggies">Services</a>
+            <a href="fruits">Foods</a>
+            <a href="#contact">Contact</a>
+    
+        </nav>
+    </header>
     <nav>
         <a href="/fruits/New">Create a new Fruit</a>
     </nav>
