--- a/views/veggies/index.ejs
+++ b/views/veggies/index.ejs
@@ -7,6 +7,19 @@
     <title>Veggies</title>
 </head>
 <body>
+    <header class="header">
+        <a href="#" class="logo">Foods</a>
+        <i class='bx bx-menu' id="menu-icon"></i>
+        <nav class="navbar">
+          <Total of 5 a tags>
+            <a href="home.ejs" class="active">Home</a>
+            <a href="meats">About</a>
+            <a href="veggies">Services</a>
+            <a href="fruits">Foods</a>
+            <a href="#contact">Contact</a>
+    
+        </nav>
+    </header>
     <section class="timeline">
         <div class="timeline-row">
             <div class="timeline-column">
