--- a/public/css/veggies.css
+++ b/public/css/veggies.css
@@ -1,5 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
 
+:root {
+  --bg-color:#A5DD9B;
+  --second-bg-color: #8ee4af;
+  --text-color: #F6F193;
+  --main-color: #05386b;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -10,6 +17,48 @@
 body {
   background: #17FF00;
   color: #ededed;
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 2rem 9%;
+  background: var(--bg-color);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 100;
+}
+
+.navbar a {
+  font-size: 1.7rem;
+  color: var(--text-color);
+  margin-left: 4rem;
+  transition: 0.3s ease;
+}
+
+.navbar a:hover,
+.navbar a.active {
+  color: var(--second-bg-color);
+}
+
+#menu-icon {
+  font-size: 3.6rem;
+  color: var(--text-color);
+  display: none;
+}
+.logo {
+  font-size: 2.5rem;
+  color: var(--text-color);
+  font-weight: 600;
+  cursor: default;
+  transition: 0.5s ease;
+}
+
+.logo:hover {
+  color: #0ef;
 }
 
 .timeline {
