--- a/views/home.ejs
+++ b/views/home.ejs
@@ -75,8 +75,9 @@
                 <p>
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis, sit!
                 </p>
+                <a href="fruits" class="btn">Find services</a>
             </div>
-            
+            <h1><a href="recipes.ejs">recipes</a></h1>
         </div>
     </section>
 </body>
