--- a/views/fruits/index.ejs
+++ b/views/fruits/index.ejs
@@ -14,15 +14,15 @@
         <nav class="navbar">
           <Total of 5 a tags>
             <a href="home.ejs" class="active">Home</a>
-            <a href="meats">About</a>
-            <a href="veggies">Services</a>
-            <a href="fruits">Foods</a>
+            <a href="about">About</a>
+            <a href="veggies">Veggies</a>
+            <a href="meats">Meats</a>
             <a href="#contact">Contact</a>
     
         </nav>
     </header>
     <nav>
-        <a href="/fruits/New">Create a new Fruit</a>
+        <a href="/fruits/new">Create a new Fruit</a>
     </nav>
     <section class="timeline">
         <div class="timeline-row">
