--- a/views/meats/index.ejs
+++ b/views/meats/index.ejs
@@ -12,10 +12,10 @@
         <i class='bx bx-menu' id="menu-icon"></i>
         <nav class="navbar">
           <Total of 5 a tags>
-            <a href="home.ejs" class="active">Home</a>
-            <a href="meats">About</a>
-            <a href="veggies">Services</a>
-            <a href="fruits">Foods</a>
+            <a href="Home" class="active">Home</a>
+            <a href="about">About</a>
+            <a href="veggies">Veggies</a>
+            <a href="fruits">Fruits</a>
             <a href="#contact">Contact</a>
     
         </nav>
@@ -37,7 +37,7 @@
                                         consequatur tempore exercitationem vitae, assumenda ea ex ipsam explicabo, neque
                                         tenetur pariatur at fugit?
                                     </p>
-                                    <a href="./meat/<%= index %>">Checkout more...</a>
+                                    <a href="./meats/<%= index %>">Checkout more...</a>
                                 </div>
                             </div>
                             <div>
@@ -63,7 +63,7 @@
                                         consequatur tempore exercitationem vitae, assumenda ea ex ipsam explicabo, neque
                                         tenetur pariatur at fugit?
                                     </p>
-                                    <a href="./meat/<%= index %>">Checkout more...</a>
+                                    <a href="./meats/<%= index %>">Checkout more...</a>
                                 </div>
                             </div>
                             <div>
