--- a/views/veggies/index.ejs
+++ b/views/veggies/index.ejs
@@ -13,9 +13,9 @@
         <nav class="navbar">
           <Total of 5 a tags>
             <a href="home.ejs" class="active">Home</a>
-            <a href="meats">About</a>
-            <a href="veggies">Services</a>
-            <a href="fruits">Foods</a>
+            <a href="about">About</a>
+            <a href="veggies">Veggies</a>
+            <a href="fruits">Fruits</a>
             <a href="#contact">Contact</a>
     
         </nav>
@@ -63,7 +63,7 @@
                                         consequatur tempore exercitationem vitae, assumenda ea ex ipsam explicabo, neque
                                         tenetur pariatur at fugit?
                                     </p>
-                                    <a href="./veggies/<%= index %>">Checkout more...</a>
+                                    <a href="/views/ index %>">Checkout more...</a>
                                 </div>
                             </div>
                             <div>
