--- a/public/css/veggies.css
+++ b/public/css/veggies.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
 
 :root {
-  --bg-color:#A5DD9B;
+  --bg-color: #A5DD9B;
   --second-bg-color: #8ee4af;
   --text-color: #F6F193;
   --main-color: #05386b;
@@ -15,8 +15,8 @@
 }
 
 body {
-  background: #17FF00;
-  color: #ededed;
+  background: var(--bg-color);
+  color: var(--main-color);
 }
 
 .header {
@@ -25,11 +25,12 @@ body {
   left: 0;
   width: 100%;
   padding: 2rem 9%;
-  background: var(--bg-color);
   display: flex;
   justify-content: space-between;
   align-items: center;
   z-index: 100;
+  height: 50px;
+  margin-bottom: 20px;
 }
 
 .navbar a {
@@ -49,6 +50,7 @@ body {
   color: var(--text-color);
   display: none;
 }
+
 .logo {
   font-size: 2.5rem;
   color: var(--text-color);
@@ -59,6 +61,10 @@ body {
 
 .logo:hover {
   color: #0ef;
+}
+
+.nav a {
+  color: green;
 }
 
 .timeline {
@@ -87,7 +93,7 @@ body {
 
 .timeline-column .timeline-box {
   position: relative;
-  border-left: 2px solid #0ef;
+  border-left: 2px solid var(--text-color);
 }
 
 .timeline-box .timeline-content {
@@ -102,13 +108,13 @@ body {
   left: -10.5px;
   width: 20px;
   height: 20px;
-  background: #0ef;
+  background: var(--text-color);
   border-radius: 50%;
 }
 
 .timeline-content .content {
   padding: 24px;
-  border: 2px solid #0ef;
+  border: 2px solid var(--text-color);
   border-radius: 8px;
   margin-bottom: 32px;
 }
