--- a/views/fruits/show.ejs
+++ b/views/fruits/show.ejs
@@ -37,9 +37,9 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Et a eius laboriosam labore voluptate
                     aspernatur reprehenderit voluptatum aliquid ut magni!
                 </p>
-                <a href="./fruits">Go Back</a>
-                <button><a href="/fruits/ <%= id %>/edit">Edit</a></button>
-                <button><a href="/fruits/<%= id %>">Delete Fruits</a></button>
+                <a href="/views/fruits">Go Back</a>
+                <button><a href="/fruits/<%= id %>/edit">Edit</a></button>
+                <button><a href="/fruits/<%= id %>/delete">Delete Fruit</a></button>
 </body>
 
 </html>
